[package]
name = "tumbler"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["web"]
web = ["dep:wasm-bindgen", "dep:web-sys", "dep:getrandom"]

[dependencies]
avian3d = { git = "https://github.com/Jondolf/avian", branch = "main" }
bevy = "0.17.2"
wasm-bindgen = { version = "0.2.104", optional = true }
web-sys = { version = "0.3.81", features = ["DeviceAcceleration", "DeviceMotionEvent"], optional = true }
getrandom = { version = "*", features = ["wasm_js"], optional = true }
