[package]
name = "tumbler"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# default = ["web"]
web = ["dep:wasm-bindgen", "dep:web-sys", "dep:getrandom"]
webgpu = ["web", "bevy/webgpu"]

[dependencies]
avian3d = "0.4"
bevy = { version = "0.17.2", features = ["mp3"] }
wasm-bindgen = { version = "0.2.104", optional = true }
web-sys = { version = "0.3.81", features = ["DeviceAcceleration", "DeviceMotionEvent"], optional = true }
getrandom = { version = "*", features = ["wasm_js"], optional = true }
