[package]
name = "tumbler"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
webgpu = ["bevy/webgpu"]

[dependencies]
avian3d = "0.4"
bevy = { version = "0.17.2", features = ["mp3"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.104" }
web-sys = { version = "0.3.81", features = ["DeviceAcceleration", "DeviceMotionEvent"] }
